# HIESv2.0

Heading Indicator/: CMakeLists.txt
Heading Indicator/include/: HIManager.hpp  HeadingIndicator.hpp  VertexBufferObject.hpp  shaderProgram.hpp
Heading Indicator/shaders/: fragmentshadersource.glsl  vertexshadersource.glsl
Heading Indicator/src/: HIManager.cpp  HeadingIndicator.cpp  VertexBufferObject.cpp  main.cpp  shaderProgram.cpp  texturemanager.cpp
